Closed Bug 1087848 Opened 10 years ago Closed 10 years ago

gfx/thebes/ContextStateTracker.cpp:8:29: fatal error: ProfilerMarkers.h: No such file or directory (non-SPS)

Categories

(Core :: Graphics, defect)

All
FreeBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: jbeich, Assigned: BenWa)

References

Details

Attachments

(1 file, 1 obsolete file)

On platforms lacking SPS profiler (Linux/PPC, BSDs, Solaris) the build is broken because of missing MOZ_ENABLE_PROFILER_SPS ifdefs. gfx/thebes/ContextStateTracker.cpp:8:10: fatal error: 'ProfilerMarkers.h' file not found #include "ProfilerMarkers.h" ^ 1 error generated.
Summary: gfx/thebes/ContextStateTracker.cpp:8:29: fatal error: ProfilerMarkers.h: No such file or directory → gfx/thebes/ContextStateTracker.cpp:8:29: fatal error: ProfilerMarkers.h: No such file or directory (non-SPS)
Attached patch patchSplinter Review
Attached patch fix (obsolete) — Splinter Review
Attachment #8510037 - Flags: review?(bgirard)
Wont you get an error on missing GPUMarkerPayload?
Comment on attachment 8510037 [details] [diff] [review] fix Oh, I've lost the race by 5 seconds. ;)
Attachment #8510037 - Attachment is obsolete: true
Attachment #8510037 - Flags: review?(bgirard)
Can you confirm this patch is sufficient and that I haven't missed anything else before we land this?
(In reply to Benoit Girard (:BenWa) from comment #3) > Wont you get an error on missing GPUMarkerPayload? No, the call is erased by C preprocessor. See PROFILER_MARKER_PAYLOAD() stub in GeckoProfiler.h. (In reply to Benoit Girard (:BenWa) from comment #5) > Can you confirm this patch is sufficient and that I haven't missed anything > else before we land this? My build succeeds with either patch. Try is green as well.
Assignee: nobody → bgirard
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: