Bug 1087848 - Fix bustage when building without MOZ_ENABLE_PROFILER_SPS. r=trivial